Colaboratory를 통해 생성됨

--- a/inclass/01w_0312_tue_bigdata_basic_ipynb.ipynb
+++ b/inclass/01w_0312_tue_bigdata_basic_ipynb.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOTtkB9wWjgO9FsDNGrql12",
+      "authorship_tag": "ABX9TyPscYWinmf/BAoBULGnE8Ps",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -150,6 +150,34 @@
           },
           "metadata": {},
           "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "\n",
+        "print(np.__version__)\n",
+        "print(pd.__version__)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "89mzKgXONA4S",
+        "outputId": "98eb88fa-b68b-46b3-e800-21727b7a2f86"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.25.2\n",
+            "1.5.3\n"
+          ]
         }
       ]
     }
