--- a/inclass/01w_0312_tue_bigdata_basic_ipynb.ipynb
+++ b/inclass/01w_0312_tue_bigdata_basic_ipynb.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPtia3k4yT6mmTC+mjYVq12",
+      "authorship_tag": "ABX9TyPAJ0hwMdc11sihYKYVusQ6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1062,6 +1062,50 @@
           },
           "metadata": {},
           "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "titanic.info()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6jEWaePYV84i",
+        "outputId": "f50dbbdb-cbd2-48c4-eb71-36e6c8b281dd"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 891 entries, 0 to 890\n",
+            "Data columns (total 15 columns):\n",
+            " #   Column       Non-Null Count  Dtype   \n",
+            "---  ------       --------------  -----   \n",
+            " 0   survived     891 non-null    int64   \n",
+            " 1   pclass       891 non-null    int64   \n",
+            " 2   sex          891 non-null    object  \n",
+            " 3   age          714 non-null    float64 \n",
+            " 4   sibsp        891 non-null    int64   \n",
+            " 5   parch        891 non-null    int64   \n",
+            " 6   fare         891 non-null    float64 \n",
+            " 7   embarked     889 non-null    object  \n",
+            " 8   class        891 non-null    category\n",
+            " 9   who          891 non-null    object  \n",
+            " 10  adult_male   891 non-null    bool    \n",
+            " 11  deck         203 non-null    category\n",
+            " 12  embark_town  889 non-null    object  \n",
+            " 13  alive        891 non-null    object  \n",
+            " 14  alone        891 non-null    bool    \n",
+            "dtypes: bool(2), category(2), float64(2), int64(4), object(5)\n",
+            "memory usage: 80.7+ KB\n"
+          ]
         }
       ]
     }
