--- a/inclass/04w_0326_tue_ch06_dataframe_handling.ipynb
+++ b/inclass/04w_0326_tue_ch06_dataframe_handling.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMQ6wsP3SoHFYFUszW+Uwrx",
+      "authorship_tag": "ABX9TyNg6+sWlwlAdqQKEL56j3xo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -10691,6 +10691,60 @@
           },
           "metadata": {},
           "execution_count": 152
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(pd.Series([1]).isin(['1']))\n",
+        "print(pd.Series([1.1]).isin(['1.1']))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FO88SRW_scjL",
+        "outputId": "932313d0-e25d-47df-ffe9-da701e1f2c9e"
+      },
+      "execution_count": 153,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0    False\n",
+            "dtype: bool\n",
+            "0    False\n",
+            "dtype: bool\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(pd.Series([1]).isin([1]))\n",
+        "print(pd.Series([1.1]).isin([1.1]))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "54eBkOH3scgu",
+        "outputId": "7e3b0e0a-7a3f-4f57-9935-85e9bfab26de"
+      },
+      "execution_count": 154,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0    True\n",
+            "dtype: bool\n",
+            "0    True\n",
+            "dtype: bool\n"
+          ]
         }
       ]
     },
